--- a/index.html
+++ b/index.html
@@ -75,9 +75,22 @@
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
                 <h1>Localisation Audio</h1>
                 <div class="btn-group pull-right">
-                    <button class="btn btn-default btn-small" data-toggle="modal" data-target="#moduleModal" >Add Module</button>
+                    <button class="btn btn-default btn-small" data-toggle="modal" data-target="#moduleModal">Add Module</button>
                     <a target="_blank" href="/get/json" class="btn btn-primary btn-small">Get Data</a>
-                    <a target="_blank" href="/download" class="btn btn-success btn-small">Download all audios</a>
+                    <!-- <a target="_blank" href="/download" class="btn btn-success btn-small">Download all audios</a> -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Download audios <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="(code, lang) in ::localCtrl.language">
+                                <a target="_blank" href="/download?lang={{code}}" ng-bind="::lang"></a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="/download">Audio for all language</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -96,13 +109,11 @@
                             <div class="list-group">
                                 <div class="list-group-item truncate" ng-repeat="(langKey, langPath) in audioValue.lang">
                                     <i class="glyphicon glyphicon-remove-sign text-danger pull-right" ng-click="localCtrl.removeAudio(moduleKey, audioKey, langKey)"></i>
-                                    <span class="label label-primary" ng-bind="::langKey"></span>
-                                    <span ng-bind="langPath"></span>
-                                    <div>
-                                        <audio controls>
-                                            <source ng-src="{{::'/'+langPath}}" type="audio/mp3"> Your browser does not support the audio element.
-                                        </audio>
-                                    </div>
+                                    <span class="label label-primary pull-left" ng-bind="::localCtrl.language[langKey]"></span>
+                                    <!-- <span ng-bind="langPath"></span> -->
+                                    <audio controls>
+                                        <source ng-src="{{::'/'+langPath}}" type="audio/mp3"> Your browser does not support the audio element.
+                                    </audio>
                                 </div>
                                 <div class="list-group-item">
                                     <button class="btn btn-default btn-sm pull-right" type="button" ng-click="localCtrl.toggleCollapsed(localCtrl.removeSpace(moduleKey+audioKey))">
@@ -110,17 +121,17 @@
                                     </button>
                                     <div class="clearfix"></div>
                                     <div class="collapse" id="{{localCtrl.removeSpace(moduleKey+audioKey)}}">
-                                        <form id="uploadForm" ng-submit="localCtrl.uploadAudio(moduleKey, audioKey, localCtrl.audio.language)">
+                                        <form id="uploadForm" ng-submit="localCtrl.uploadAudio(moduleKey, audioKey, localCtrl.audio.language, $event)">
                                             <div class="form-group">
                                                 <label>Select Language</label>
                                                 <select ng-model="localCtrl.audio.language">
-                                                    <option ng-repeat="language in ::['hindi','tamil','telugu','bengali']" ng-bind="::language" value="{{::language}}"></option>
+                                                    <option ng-repeat="(code, language) in ::localCtrl.language" ng-bind="::language" value="{{::code}}"></option>
                                                 </select>
                                             </div>
                                             <div ng-show="localCtrl.audio.language">
                                                 <div class="form-group">
                                                     <label>Upload audio file</label>
-                                                    <input type="file" onchange="angular.element(this).scope().localCtrl.audio.file=this.files" />
+                                                    <input type="file" onchange="angular.element(this).scope().localCtrl.audio.file=this.files" accept="audio/mp3" />
                                                 </div>
                                                 <div class="form-group">
                                                     <input class="btn btn-primary btn-sm" type="submit" value="Upload Audio" name="submit">
